force-app/main/default/objects/SurveyResult__c/SurveyResult__c.object-meta.xml
<CustomObject>
    <label>アンケート結果</label>
    <nameField>
        <label>アンケート結果</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>