force-app/main/default/objects/SurveyResult__c/fields/AdditionalFeedback__c.field-meta.xml
<CustomField>
    <fullName>AdditionalFeedback__c</fullName>
    <label>その他改善点・ご意見（自由記述欄）</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>