force-app/main/default/objects/SurveyResult__c/fields/EfficiencyNoImpactReason__c.field-meta.xml
<CustomField>
    <fullName>EfficiencyNoImpactReason__c</fullName>
    <label>効率化に繋がらなかった理由</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>