force-app/main/default/objects/SurveyResult__c/fields/ProposalSpeedSatisfaction__c.field-meta.xml
<CustomField>
    <fullName>ProposalSpeedSatisfaction__c</fullName>
    <label>提案のスピードに関する満足度</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>満足</fullName>
            </value>
            <value>
                <fullName>やや満足</fullName>
            </value>
            <value>
                <fullName>やや不満</fullName>
            </value>
            <value>
                <fullName>不満</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>