force-app/main/default/objects/SurveyResult__c/fields/ServiceEfficiencyImpact__c.field-meta.xml
<CustomField>
    <fullName>ServiceEfficiencyImpact__c</fullName>
    <label>サービスの提供が業務効率化につながったか</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>はい</fullName>
            </value>
            <value>
                <fullName>いいえ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>