force-app/main/default/objects/SurveyResult__c/fields/surveyContact__c.field-meta.xml
<CustomField>
    <fullName>surveyContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>回答者（取引先担当者）</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>アンケート結果</relationshipLabel>
    <relationshipName>surveyContact</relationshipName>
    <type>Lookup</type>
</CustomField>