force-app/main/default/objects/SurveyResult__c/fields/SurveyName__c.field-meta.xml
<CustomField>
    <fullName>SurveyName__c</fullName>
    <label>アンケート名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>