force-app/main/default/objects/SurveyResult__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SurveyName__c</columns>
    <columns>ProposalSatisfaction__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべてのレコード</label>
</ListView>